apps/ganache/staging/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ganache-ingress
  namespace: ganache
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: ganache-tls
    hosts:
    - ganache.omni.cedille.club
  rules:
  - host: ganache.omni.cedille.club
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ganache
            port:
              number: 8545
